changing to resume and cv

--- a/sarahcoyne/src/app/resume/resume.component.html
+++ b/sarahcoyne/src/app/resume/resume.component.html
@@ -24,7 +24,7 @@
                 frameborder="0">
             </iframe>
             <a href="assets/pdfs/pdf1.pdf" download class="px-4 py-2 bg-red-800 text-white rounded-lg hover:bg-red-900 transition">
-                Download PDF 1
+                Download Resume
             </a>
         </div>
 
@@ -39,7 +39,7 @@
                 frameborder="0">
             </iframe>
             <a href="assets/pdfs/pdf2.pdf" download class="px-4 py-2 bg-red-800 text-white rounded-lg hover:bg-red-900 transition">
-                Download PDF 2
+                Download CV
             </a>
         </div>
     </div>
