vertical on mobile

--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div class="min-h-screen flex flex-col gap-4 p-4">
-            <div class="flex gap-4">
+            <div class="flex flex-col md:flex-row gap-4">
                 <!-- Image div -->
                 <div class="flex-1 flex bg-purple-200 p-4 rounded-lg shadow items-center justify-center">
                     <figure class="flower-figure flex items-center justify-center">
