changing to w-full

--- a/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
+++ b/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="bg-herb text-lab p-4">
-  <div class="relative inline-block menu-container">
+  <div class="relative w-full menu-container">
     <!-- Menu Button -->
     <button 
       (click)="toggleMenu()" 
