--- a/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
+++ b/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
     <!-- Menu Button -->
     <button 
       (click)="toggleMenu()" 
-      class="px-4 py-1 rounded-lg text-red-900 transition font-heading text-lg focus:outline-none hover:bg-purple-600 hover:text-white"
+      class="px-4 py-1 rounded-lg text-red-900 transition font-heading font-semibold text-lg focus:outline-none hover:bg-purple-600 hover:text-white"
     >
       🍄🪴🫚 Menu 🫚🪴🍄
     </button>
