--- a/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
+++ b/sarahcoyne/src/app/pages/nav-bar/nav-bar.component.html
@@ -3,8 +3,8 @@
     <!-- Menu Button -->
     <button 
       (click)="toggleMenu()" 
-      class="px-4 py-1 rounded-lg text-red-900 transition font-heading font-semibold text-lg focus:outline-none hover:bg-purple-600 hover:text-white"
-    >
+      class="px-2 py-1 sm:px-4 rounded-lg text-red-900 transition font-heading font-semibold text-base sm:text-lg focus:outline-none hover:bg-purple-600 hover:text-white"
+      >
       🍄🪴🫚 Menu 🫚🪴🍄
     </button>
 
