--- a/sarahcoyne/src/app/pages/fun/fun.component.html
+++ b/sarahcoyne/src/app/pages/fun/fun.component.html
@@ -1,3 +1,6 @@
+<head>
+    <meta name="google-site-verification" content="YB0ab-PmliaxC-Zd7oAxyyJSRAsBF-903VDlOvG9Ww0"/>
+</head>
 <div class="container-fluid">
     <div class="row">
       <div class="col-md-2 p-0">
