--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -69,6 +69,13 @@
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-3" style="font-family: 'Bitter', serif;">
                     Sarah writes an about of herself....
+
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo
+                    
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo
+
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo
+
                 </h2>
             </div>
         </div>
