--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -68,13 +68,13 @@
                     About Me
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-3" style="font-family: 'Bitter', serif;">
-                    Sarah writes an about of herself.... <br>
+                    Sarah writes an about of herself.... <br><br>
 
-                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br>
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br> <br>
                     
-                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br>
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br> <br>
 
-                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br>
+                    ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo ogarginongoierngi jasnfwnegufgvnvuaiu jasibruurnakskbfwpppekfmamgo <br> <br>
 
                 </h2>
             </div>
