--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -68,7 +68,11 @@
                     About Me
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-3" style="font-family: 'Bitter', serif;">
-                    Sarah writes an about of herself.... <br><br>
+                    Hello! My name is Sarah and I am heading into my senior year at Michigan State University. I am studying Food Science with a concentration in Business and Industry and a Health Promotion minor. I am passionate about high quality science and exploring the connection between consumers and food! I invite you to look through this site to get to know me, my experiences, and my interests!
+
+Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my resume and CV! 
+
+Please reach out to me with any questions or comments at coynesar@msu.edu! <br><br>
                 </h2>
             </div>
         </div>
