--- a/sarahcoyne/src/app/pages/fun/fun.component.html
+++ b/sarahcoyne/src/app/pages/fun/fun.component.html
@@ -14,7 +14,7 @@
                 The Fun Stuff!
           </h1>
           <h2 class="text-lg md:text-xl text-gray-700 mt-2" style="font-family: 'Bitter', serif;">
-            Write stuff
+            Here are some of my interests outside of the classroom!
           </h2>
         </div>
   
