--- a/sarahcoyne/src/app/pages/projects/projects.component.html
+++ b/sarahcoyne/src/app/pages/projects/projects.component.html
@@ -22,21 +22,21 @@
                 <div class="bg-white rounded-lg shadow p-4 projects">
                     <h3 class="text-xl font-semibold text-red-800 mb-2">Project 1</h3>
                     <p class="text-gray-700 text-sm">
-                        A project
+                        In 2024, I presented on GM-MS and SMPE characterization of 18 volatile compounds of treated and untreated pulse flours of white kidney, cranberry, and chickpea cultivars. I continued to be a part of this project through 2025.
                     </p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 projects">
                     <h3 class="text-xl font-semibold text-red-800 mb-2">Project 2</h3>
                     <p class="text-gray-700 text-sm">
-                        Another cool project!
+                        In 2025, I presented data collected from a focus group I assisted with on consumer preferences and perceptions of pulse based products on the market to better understand the hurdles that product developers face today. 
                     </p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 projects">
                     <h3 class="text-xl font-semibold text-red-800 mb-2">Project 3</h3>
                     <p class="text-gray-700 text-sm">
-                        Yet another one
+                        I have also helped on a handful of industry projects and department collaborations including a consumer study on fermented corn pancakes done in partnership with the horticulture department!
                     </p>
                 </div>
 
