--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -72,7 +72,7 @@
 
 Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my resume and CV! 
 
-Please reach out to me with any questions or comments at coynesar@msu.edu!
+Please reach out to me with any questions or comments at coynesar&#64;msu.edu!
 <br><br>
                 </h2>
             </div>
