--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@
                     </h1>
                     <h2 class="text-xl md:text-2xl font-medium text-gray-700 mt-2"
                         style="font-family: 'Bitter', serif;">
-                        Food Science student and Michigan State University
+                        Food Science Student at Michigan State University
                     </h2>
 
                     <div class="flex gap-4 mt-4 justify-center">
@@ -68,9 +68,9 @@
                     About Me
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-3" style="font-family: 'Bitter', serif;">
-                    Hello! My name is Sarah and I am heading into my senior year at Michigan State University. I am studying Food Science with a concentration in Business and Industry and a Health Promotion minor. I am passionate about high quality science and exploring the connection between consumers and food! I invite you to look through this site to get to know me, my experiences, and my interests!
+                    Hello! My name is Sarah and I am heading into my senior year at Michigan State University. I am studying Food Science with a concentration in Business and Industry and a Health Promotion minor. I am passionate about high quality science and exploring the connection between consumers and food! I invite you to look through this site to get to know me, my experiences, and my interests! <br><br>
 
-Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my resume and CV! 
+Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my resume and CV! <br><br>
 
 Please reach out to me with any questions or comments at coynesar&#64;msu.edu!
 <br><br>
