--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -68,11 +68,12 @@
                     About Me
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-3" style="font-family: 'Bitter', serif;">
-                    Hello! My name is Sarah and I am heading into my senior year at Michigan State University. I am studying Food Science with a concentration in Business and Industry and a Health Promotion minor. I am passionate about high quality science and exploring the connection between consumers and food! I invite you to look through this site to get to know me, my experiences, and my interests! <br><br>
+                    Hello! My name is Sarah and I am currently a senior year at Michigan State University. I am studying Food Science with a concentration in Business and Industry and a Health Promotion minor. I am passionate about high quality science and exploring the connection between consumers and food! Take a look around my site to learn more about me, my experiences, and my goals! <br><br>
 
-Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my resume and CV! <br><br>
+Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my <a href="https://sarah-coyne.github.io/resume"    class="text-pink-700 font-semibold  hover:text-blue-900 transition">
+resume and CV</a>! <br><br>
 
-Please reach out to me with any questions or comments at coynesar&#64;msu.edu!
+Please reach out to me with any questions or comments at <a href="mailto:coynesar@msu.edu" class="text-pink-700 font-semibold  hover:text-blue-900 transition">coynesar&#64;msu.edu</a>!
 <br><br>
                 </h2>
             </div>
