--- a/sarahcoyne/src/app/pages/projects/projects.component.html
+++ b/sarahcoyne/src/app/pages/projects/projects.component.html
@@ -14,27 +14,27 @@
                     My Projects
                 </h1>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-2" style="font-family: 'Bitter', serif;">
-                    Sarah writes blurb about her projects
+                    Some projects that I have worked on in the Sensory Lab! 
                 </h2>
             </div>
 
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 mt-2">
                 <div class="bg-white rounded-lg shadow p-4 projects">
-                    <h3 class="text-xl font-semibold text-red-800 mb-2">Project 1</h3>
+                    <h3 class="text-xl font-semibold text-red-800 mb-2">Volitlile Characterization with GCMS and SPME</h3>
                     <p class="text-gray-700 text-sm">
                         In 2024, I presented on GM-MS and SMPE characterization of 18 volatile compounds of treated and untreated pulse flours of white kidney, cranberry, and chickpea cultivars. I continued to be a part of this project through 2025.
                     </p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 projects">
-                    <h3 class="text-xl font-semibold text-red-800 mb-2">Project 2</h3>
+                    <h3 class="text-xl font-semibold text-red-800 mb-2">Consumer and Non-Comsumer Pulse Products Focus Group</h3>
                     <p class="text-gray-700 text-sm">
                         In 2025, I presented data collected from a focus group I assisted with on consumer preferences and perceptions of pulse based products on the market to better understand the hurdles that product developers face today. 
                     </p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 projects">
-                    <h3 class="text-xl font-semibold text-red-800 mb-2">Project 3</h3>
+                    <h3 class="text-xl font-semibold text-red-800 mb-2">Industry and Departemetal Collaborations</h3>
                     <p class="text-gray-700 text-sm">
                         I have also helped on a handful of industry projects and department collaborations including a consumer study on fermented corn pancakes done in partnership with the horticulture department!
                     </p>
