--- a/sarahcoyne/src/app/pages/fun/fun.component.html
+++ b/sarahcoyne/src/app/pages/fun/fun.component.html
@@ -25,8 +25,8 @@
             style="background-color: rgb(255, 213, 251); 
                    border: 2px solid rgb(218, 117, 255); 
                    border-radius: 16px;">
-            <img [src]="sarah_running.JPG" [alt]="Racing the mile at Last Chance Invite" />
-            <figcaption>I have been a competitive distance runner for 12 years and my favorite event is the mile!</figcaption>
+          <img [src]="photo.src" [alt]="photo.caption" />
+          <figcaption>{{ photo.caption }}</figcaption>
           </figure>
         </div>
       </div>
