--- a/sarahcoyne/src/app/pages/fun/fun.component.html
+++ b/sarahcoyne/src/app/pages/fun/fun.component.html
@@ -25,7 +25,7 @@
             style="background-color: rgb(255, 213, 251); 
                    border: 2px solid rgb(218, 117, 255); 
                    border-radius: 16px;">
-          <img [src]="photo.scr" [alt]="photo.caption" />
+          <img [src]="photo.src" [alt]="photo.caption" />
           <figcaption>{{ photo.caption }}</figcaption>
           </figure>
         </div>
