--- a/sarahcoyne/src/app/pages/interests/interests.component.html
+++ b/sarahcoyne/src/app/pages/interests/interests.component.html
@@ -27,8 +27,8 @@
 
                     <div class="mt-6 w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
-                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Career Interest 1</strong><br>
-                            A blurb about this interest
+                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Product Development</strong><br>
+                            I am passionate about creating foods that are healty, accessable, and tasty! I am excited to apply all areas of my degree to my career. Product development allows me to utilize all my knowledge on food science, nutrition, and buisness! 
                         </h2>
                     </div>
 
@@ -36,8 +36,8 @@
 
                     <div class="w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
-                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Career Interest 2</strong><br>
-                            A blurb about this interest
+                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Sensory</strong><br>
+                            I 
                         </h2>
                     </div>
 
@@ -45,7 +45,7 @@
 
                     <div class="w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
-                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Career Interest 3</strong><br>
+                            <strong style="font-size: 22px; color: rgb(228, 0, 125)">Process Engineering</strong><br>
                             A blurb about this interest
                         </h2>
                     </div>
