--- a/sarahcoyne/src/app/pages/projects/projects.component.html
+++ b/sarahcoyne/src/app/pages/projects/projects.component.html
@@ -14,7 +14,7 @@
                     My Projects
                 </h1>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-2" style="font-family: 'Bitter', serif;">
-                    Some projects that I have worked on in the Sensory Lab! 
+                    Some current and past projects that I have worked on in the Sensory Lab! 
                 </h2>
             </div>
 
