--- a/sarahcoyne/src/app/pages/interests/interests.component.html
+++ b/sarahcoyne/src/app/pages/interests/interests.component.html
@@ -28,7 +28,7 @@
                     <div class="mt-6 w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
                             <strong style="font-size: 22px; color: rgb(228, 0, 125)">Product Development</strong><br>
-                            I am passionate about creating foods that are healty, accessable, and tasty! I am excited to apply all areas of my degree to my career. Product development allows me to utilize all my knowledge on food science, nutrition, and buisness! 
+                            I am passionate about creating foods that are healty, accessable, and tasty! A career in product development allows me to utilize all my knowledge on food science, nutrition, and buisness! 
                         </h2>
                     </div>
 
@@ -37,7 +37,7 @@
                     <div class="w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
                             <strong style="font-size: 22px; color: rgb(228, 0, 125)">Sensory</strong><br>
-                            I 
+                            I have spent three years of undergrad as an active member of the Mayhew Sensory lab where I have gained hands on experience with the scientific method and anylitical sensory devices. Here, I found my passion for science, chemistry, and consumer behaviors. I find it fascinating how different people can experience identical stimuli differently. I would love to keep learning in this field! 
                         </h2>
                     </div>
 
@@ -46,7 +46,7 @@
                     <div class="w-full">
                         <h2 class="text-lg md:text-xl text-gray-700 text-left" style="font-family: 'Bitter', serif;">
                             <strong style="font-size: 22px; color: rgb(228, 0, 125)">Process Engineering</strong><br>
-                            A blurb about this interest
+                            As this website may clue to, I have a stong interest and background in food chemistry and sensory science. However, during my time at my two internsips, I had the opportunity to work with different process engineers at the R&D pilot plant scale to the manufacuring scale. I am always looking for new ways to challenge myself weather that be with Division 1, Big10 athletics or coding a website! Process engineering is an area I have lots of room to grow in.
                         </h2>
                     </div>
                 </div>
@@ -87,10 +87,11 @@
             <div class="bg-purple-200 p-6 rounded-lg shadow text-center">
                 <h2 class="text-2xl md:text-3xl font-bold text-red-900 text-center w-full"
                     style="font-family: 'Bitter', serif;">
-                    A box summarizing / saying she's open to all sorts of things and not exclusively these interests
+                    As a young professional, I am open and excited to explore all opportunities and pathways!
+
                 </h2>
                 <h2 class="text-lg md:text-xl text-gray-700 mt-2" style="font-family: 'Bitter', serif;">
-                    Sarah writes a little blurb about her interests.
+                    
                 </h2>
             </div>
         </div>
