--- a/sarahcoyne/src/app/pages/projects/projects.component.html
+++ b/sarahcoyne/src/app/pages/projects/projects.component.html
@@ -22,14 +22,14 @@
                 <div class="bg-white rounded-lg shadow p-4 projects">
                     <h3 class="text-xl font-semibold text-red-800 mb-2">Volitlile Characterization with GCMS and SPME</h3>
                     <p class="text-gray-700 text-sm">
-                        In 2024, I presented on GM-MS and SMPE characterization of 18 volatile compounds of treated and untreated pulse flours of white kidney, cranberry, and chickpea cultivars. I continued to be a part of this project through 2025.
+                        In 2024, I presented on GM-MS and SMPE characterization of 18 volatile compounds of treated and untreated pulse flours of white kidney, cranberry, and chickpea cultivars. I continued to be a part of this project through 2025. This project allowed me to get comfortable using anylitical equimpent.
                     </p>
                 </div>
 
                 <div class="bg-white rounded-lg shadow p-4 projects">
                     <h3 class="text-xl font-semibold text-red-800 mb-2">Consumer and Non-Comsumer Pulse Products Focus Group</h3>
                     <p class="text-gray-700 text-sm">
-                        In 2025, I presented data collected from a focus group I assisted with on consumer preferences and perceptions of pulse based products on the market to better understand the hurdles that product developers face today. 
+                        In 2025, I presented data collected from a focus group I assisted with on consumer preferences and perceptions of pulse based products on the market to better understand the hurdles that product developers face today. I was able to better understand different methods of consumer data collection.
                     </p>
                 </div>
 
