--- a/sarahcoyne/src/app/pages/home/home.component.html
+++ b/sarahcoyne/src/app/pages/home/home.component.html
@@ -73,7 +73,7 @@
 Through my college years, I have gained invaluable experiences at The J.M. Smucker Co. as a R&D Product Development Intern on both their spreads and coffee teams. Here, I was able to practice what I continue to learn in the classroom about product development, process engineering principles, and quality and safety practices. Working for a fortune 500 company also allowed me to utilize my concentration in business through my intern projects. At MSU I am highly involved with the MSU Sensory lab where I have had a hands-on role in projects that affect the food industry today!  Additionally, I am a student athlete at MSU on the cross country and track team. I have very unique experiences working under pressure and with a team toward a common goal. Please read more about my experiences on my <a href="https://sarah-coyne.github.io/resume"    class="text-pink-700 font-semibold  hover:text-blue-900 transition">
 resume and CV</a>! <br><br>
 
-Please reach out to me with any questions or comments at <a href="mailto:coynesar@msu.edu" class="text-pink-700 font-semibold  hover:text-blue-900 transition">coynesar&#64;msu.edu</a>!
+I invite you to look through this website and please reach out to me with any questions or comments at <a href="mailto:coynesar@msu.edu" class="text-pink-700 font-semibold  hover:text-blue-900 transition">coynesar&#64;msu.edu</a>!
 <br><br>
                 </h2>
             </div>
