--- a/sarahcoyne/src/app/pages/resume/resume.component.html
+++ b/sarahcoyne/src/app/pages/resume/resume.component.html
@@ -24,9 +24,9 @@
                         style="font-family: 'Bitter', serif;">
                         Resume
                     </h2>
-                    <iframe src="assets/pdfs/pdf1.pdf" class="w-full h-96 md:h-[500px] mb-4" frameborder="0">
+                    <iframe src="assets/pdf/Sarah_Coynes_Resume.pdf" class="w-full h-96 md:h-[500px] mb-4" frameborder="0">
                     </iframe>
-                    <a href="assets/pdfs/pdf1.pdf" download
+                    <a href="assets/pdf/Sarah_Coynes_Resume.pdf" download
                         class="px-4 py-2 bg-red-800 text-white rounded-lg hover:bg-red-900 transition">
                         Download Resume
                     </a>
